gitops/apps/hello-roberto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-roberto
  labels:
    app.kubernetes.io/name: hello-roberto
spec:
  selector:
    app.kubernetes.io/name: hello-roberto
  ports:
    - name: http
      port: 80
      targetPort: http
